--- a/firebase.json
+++ b/firebase.json
@@ -5,9 +5,13 @@
   },
   "functions": {
     "source": "functions",
-    "predeploy": [
-      "npm.cmd --prefix \"%RESOURCE_DIR%\" ci",
-      "npm.cmd --prefix \"%RESOURCE_DIR%\" run build"
-    ]
+    "runtime": "nodejs22"
+  },
+  "emulators": {
+    "firestore": { "port": 8080 },
+    "auth": { "port": 9099 },
+    "functions": { "port": 5001 },
+    "storage": { "port": 9199 },
+    "ui": { "enabled": true, "port": 4000 }
   }
 }
