--- a/firebase.json
+++ b/firebase.json
@@ -13,5 +13,6 @@
     "functions": { "port": 5001 },
     "storage": { "port": 9199 },
     "ui": { "enabled": true, "port": 4000 }
-  }
+  },
+  "storage": { "rules": "storage.rules" }
 }
