--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
 
   # Firebase
   firebase_core: ^4.0.0
+  firebase_app_check: ^0.4.0
   firebase_auth: ^6.0.0
   cloud_firestore: ^6.0.0
   firebase_storage: ^13.0.0
