--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   crypto: ^3.0.3
   google_fonts: ^6.2.1
   intl: ^0.20.2
+  syncfusion_flutter_sliders: ^30.2.4
   uuid: ^4.5.1
   timeago: ^3.6.1
 
